Fix grid col spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,7 +290,7 @@ body>#app>.app-card>.content>main>.list-templates-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: auto;
-	gap: 10px 10px;
+	gap: 15px 15px;
 	grid-template-areas: ". . .";
 	width: calc(100% - 30px);
 }
